grammar.js
    program: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.data_step,
      $.proc_sql_step,
      $.proc_step,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.libname_statement,
      $.options_statement,
      $.macro_call_statement,
      $.line_comment,
      $.generic_statement,
    ),

    // ── Comments ───────────────────────────────────────────────────────────

    // /* ... */ — an extra so it is transparently skipped between any two tokens
    block_comment: $ => token(seq(
      "/*",
      /[^*]*\*+([^/*][^*]*\*+)*/,
      "/",
    )),

    // %* text ; — SAS macro language comment; an extra like block_comment
    data_step: $ => seq(
      $.data_step_header,
      repeat($._data_body_statement),
      $.run_statement,
    ),

    data_step_header: $ => seq(
      kw("DATA"),
      optional($._dataset_list),
      ";",
    ),

    _dataset_list: $ => seq(
      $.dataset_name,
      repeat(seq(optional(","), $.dataset_name)),
    ),

    dataset_name: $ => choice(
      seq($._dname_part, ".", $._dname_part),
      alias(
        token(choice("_NULL_", "_null_", "_DATA_", "_data_", "_LAST_", "_last_")),
        $.identifier
      ),
      $._dname_part,
    ),

    // Dataset name part: identifier or macro ref, optionally followed by more macro refs.
    // Handles _w_&&memname&d, work.&&data&d, &&libname&d, etc.
    // &var.addCnt is handled by macro_variable_ref consuming the dot+identifier suffix.
    // prec.right: greedily consume consecutive macro_variable_refs into one part.
    _dname_part: $ => prec.right(seq(
      choice($.identifier, $.macro_variable_ref),
      repeat($.macro_variable_ref),
    )),

    // ── PROC SQL step ─────────────────────────────────────────────────────

    proc_sql_step: $ => seq(
      $.proc_sql_header,
      repeat($._proc_sql_statement),
      $.run_or_quit_statement,
    ),

    proc_sql_header: $ => seq(
      kw("PROC"),
      kw("SQL"),
      repeat($._option_token),
      ";",
    ),

    _proc_sql_statement: $ => choice(
      $.sql_create_statement,
      $.sql_select_statement,
      $.sql_insert_statement,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    // CREATE TABLE output AS SELECT ... ;
    sql_create_statement: $ => seq(
      kw("CREATE"),
      kw("TABLE"),
      field("output", $.dataset_name),
      kw("AS"),
      $.sql_select_statement,
    ),

    // SELECT ... [FROM table ...] ;
    // Column list before FROM is kept flat (_sql_stmt_tok).
    // FROM is optional to support `select 1;` and similar FROM-less selects.
    // After the first table_reference, _sql_after_from_tok interleaves sql_join_clause
    // nodes with flat tokens. This keeps kw("JOIN") valid throughout the after-FROM
    // region, so keyword extraction correctly recognises JOIN even when preceded by
    // qualifier words (LEFT/RIGHT/INNER/FULL/CROSS) that land in _sql_stmt_tok.
    sql_select_statement: $ => seq(
      kw("SELECT"),
      repeat($._sql_stmt_tok),
      optional(seq(
        kw("FROM"),
        $.table_reference,
        repeat($._sql_after_from_tok),
      )),
      ";",
    ),

    // After FROM table: either a JOIN clause or any other SQL token (ON condition,
    // WHERE, GROUP BY, HAVING, ORDER BY, etc. — all kept flat).
    _sql_after_from_tok: $ => choice(
      $.sql_join_clause,
      $._sql_stmt_tok,
    ),

    // JOIN table_reference — join type qualifiers (LEFT/RIGHT/INNER/FULL/CROSS/OUTER)
    // appear in the _sql_stmt_tok stream just before JOIN and are absorbed there.
    // kw("JOIN") is the anchor that starts this rule; keyword extraction promotes it
    // over $.identifier whenever sql_join_clause is a valid alternative in the context.
    sql_join_clause: $ => seq(
      kw("JOIN"),
      $.table_reference,
    ),

    // dataset_name with optional AS alias
    table_reference: $ => seq(
      $.dataset_name,
      optional(seq(kw("AS"), $.identifier)),
    ),

    // INSERT INTO table [SELECT ... | VALUES ...] ;
    sql_insert_statement: $ => seq(
      kw("INSERT"),
      kw("INTO"),
      $.dataset_name,
      choice(
        $.sql_select_statement,
        seq(repeat($._sql_stmt_tok), ";"),
      ),
    ),

    // SQL token: anything that is not a statement terminator.
    // Stops on ";" only — keywords like FROM/JOIN are handled via tree-sitter
    // keyword extraction (they win over identifier when they are valid tokens
    // at the current parser state).
    _sql_stmt_tok: $ => choice(
      $.identifier,
      $.string_literal,
      $.macro_variable_ref,
      $.macro_call,
      $._paren_group,
      $._bare_pct,
      /[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,
      /\.[0-9]+([eE][+-]?[0-9]+)?/,
      /[^A-Za-z_0-9;()\s"'&%.]+/,
      /\./,
    ),

    // ── PROC step ─────────────────────────────────────────────────────────

    proc_step: $ => seq(
      $.proc_step_header,
      repeat($._step_statement),
      $.run_or_quit_statement,
    ),

    proc_step_header: $ => seq(
      kw("PROC"),
      field("name", $.identifier),
      repeat($._option_token),
      ";",
    ),

    run_statement: $ => seq(kw("RUN"), ";"),

    run_or_quit_statement: $ => seq(choice(kw("RUN"), kw("QUIT")), ";"),

    // ── Step body ─────────────────────────────────────────────────────────

    _step_statement: $ => choice(
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    // Standalone semicolon — valid as a null/empty statement in SAS step bodies
    // and macro bodies (common after %if/%else blocks that span multiple lines).
    // prec(-1) makes it lose to macro_call_statement's optional ";" when ambiguous.
    _data_body_statement: $ => choice(
      $.set_statement,
      $.merge_statement,
      $.update_statement,
      $.output_statement,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    // SET input1 input2 ... ;
    macro_definition: $ => seq(
      $._pct_macro,
      field("name", $.macro_name),
      optional($.macro_parameters),
      optional($.macro_options),
      ";",
      repeat($._macro_body_item),
      $.macro_end,
    ),

    macro_parameters: $ => seq(
      "(",
      optional(seq(
        $._macro_param,
        repeat(seq(",", $._macro_param)),
      )),
      ")",
    ),

    _macro_param: $ => seq(
      $.identifier,
      optional(seq("=", optional($._macro_param_default))),
    ),

    _macro_body_item: $ => choice(
      $.data_step,
      $.proc_sql_step,
      $.proc_step,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.macro_label,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    macro_end: $ => seq(
      $._pct_mend,
      optional($.macro_name),
      ";",
    ),

    // %if condition %then body [%else body]
    // prec.right resolves the dangling-else: inner %if claims the %else.
    macro_options: $ => seq(
      "/",
      repeat($._macro_option_token),
    ),

    _macro_option_token: $ => choice(
      seq($.identifier, "=", $.string_literal),  // des='description'
      $.identifier,                               // secure, minoperator, parmbuff, etc.
    ),

    // %label: — SAS macro goto label (no semicolon).  Disambiguated from
    // macro_call_statement via the conflicts declaration + GLR.
    macro_name: $ => $.identifier,

    // ── Macro call ────────────────────────────────────────────────────────

    // Standalone statement: %name(args);   %name;   %name content;
    // The third form handles SAS built-ins that take non-parenthesized content:
    //   %put text;   %do i = 1 %to &n;   %if cond %then stmt;   %global x y;
    // Option 3 splits into a required non-paren first token (_mc_tok) followed by
    // optional tokens that may include parenthesized groups (_mc_tok_inner).
    // This ensures option 3 never starts with "(" — eliminating the conflict with
    // option 1's macro_arguments — while still allowing n(&v) and opt=(...) later.
    // prec.right on option 1: prefer consuming the trailing ";" into this rule
    // rather than leaving it as a null_statement.
    macro_call_statement: $ => seq(
      "%",
      field("name", alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.macro_name)),
      choice(
        prec.right(seq($.macro_arguments, optional(";"))), // %name(args); or %name(args)
        ";",                                               // %name;
        seq($._mc_tok, repeat($._mc_tok_inner), ";"),      // %name content;
      ),
    ),

    // Inline call used as a value inside other constructs.
    // prec.right: when a "(" follows, prefer attaching it as macro_arguments
    // to this call rather than leaving it for the outer context.
    macro_call: $ => prec.right(seq(
      "%",
      field("name", alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.macro_name)),
      optional($.macro_arguments),
    )),

    // prec(1): when "(" immediately follows a macro name, prefer this over
    // _paren_group so %name(args) always uses macro_arguments.
    macro_arguments: $ => prec(1, seq(
      "(",
      optional(seq(
        $._macro_arg,
        repeat(seq(",", $._macro_arg)),
      )),
      ")",
    )),

    _macro_arg: $ => repeat1(choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      $._paren_group,
      /[^,();\s"'&%]+/,
    )),

    // Parenthesized group inside a macro argument — handles non-macro function
    // calls like index(), exist(), scan() that appear as %sysfunc arguments.
    // Commas inside are allowed (they separate the inner function's own args).
    _mc_tok: $ => choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      /&=[A-Za-z_][A-Za-z0-9_]*/,  // %put &=var shorthand
      /[^;%()\s"'&]+/,
    ),

    // Subsequent tokens in option-3 content — same as _mc_tok but also allows
    // parenthesized groups for bare SAS calls like n(&panelby) and opt=(...).
    _mc_tok_inner: $ => choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      $._paren_group,
      $._bare_pct,                  // bare % not starting a macro call
      /&=[A-Za-z_][A-Za-z0-9_]*/,  // %put &=var shorthand
      /[^;%()\s"'&]+/,
    ),

    // ── %LET ──────────────────────────────────────────────────────────────

    macro_variable_assignment: $ => seq(
      $._pct_let,
      field("name", $._let_name),
      "=",
      optional(field("value", $._macro_value)),
      ";",
    ),

    // Name in %let: identifier, or identifier+&refs, or pure &ref (e.g. %let name&i or %let &&var)
    _let_name: $ => seq(
      choice($.identifier, $.macro_variable_ref),
      repeat($.macro_variable_ref),
    ),

    _macro_value: $ => repeat1(choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      /[^;]+/,
    )),

    // ── %INCLUDE ──────────────────────────────────────────────────────────

    _option_token: $ => choice(
      $.string_literal,
      $.macro_variable_ref,
      /[^;\/\s"'&%]+/,
      /=\s*/,
    ),

    // ── Generic fallback statement ────────────────────────────────────────

    // First token must be non-% to avoid conflict with macro_call_statement.
    // Subsequent tokens may include inline macro_call (e.g. %eval, %if, %sysfunc)
    // so that proc/data statements with embedded macro calls parse cleanly.
    // _bare_pct handles literal % in ODS style attributes (e.g., width=20%).
    generic_statement: $ => seq(
      choice(
        $.string_literal,
        $.numeric_literal,
        $.macro_variable_ref,
        /[^;%\/\s"'&]+/,
        /\//,
      ),
      repeat(choice(
        $.string_literal,
        $.numeric_literal,
        $.macro_variable_ref,
        $.macro_call,
        $._bare_pct,
        /[^;%\/\s"'&]+/,
        /\//,
      )),
      ";",
    ),

    // ── Primitives ────────────────────────────────────────────────────────

    // &var, &&var, &&&var, etc.
    // Each "segment" is an optional dot then an optional identifier — covering:
    //   &var          (no trailing dot)
    //   &var.         (macro separator dot, nothing after)
    //   &var.suffix   (dot + literal text appended to expansion, e.g. &dsname.addCnt)
    //   &&var.name    (double-amp indirect reference with suffix)
    // Using choice(dot+ident, dot) with dot+ident first so the longer form wins.
    macro_variable_ref: $ => token(seq(
      /&+/,
      /[A-Za-z_][A-Za-z0-9_]*/,
      repeat(choice(
        /\.[A-Za-z_][A-Za-z0-9_]*/,
        /\./,
      )),
    )),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

    // Single or double quoted; quote char escaped by doubling.
    // The quoted content is wrapped in token() so that block_comment extras
    // cannot fire inside a string — without token(), a string like
    // '/*code-block-start##*/' would let the block_comment extra match the
    // /*...*/ span and consume subsequent source lines as part of the comment.
    // %" inside double-quoted strings is a SAS macro-quoting form that produces
    // a literal " character; list it first so the embedded " does not prematurely
    // close the token.  Single-quoted strings have no such form — '' is the only
    // escape — so %' is NOT listed; otherwise '''%' would greedily consume the
    // closing ' as part of the %' sequence and fail to tokenize.
    string_literal: $ => choice(
      seq(token(seq("'", repeat(choice(/[^']+/, "''")), "'")), optional($._string_suffix)),
      seq(token(seq('"', repeat(choice(/%"/, /[^"]+/, '""')), '"')), optional($._string_suffix)),
    ),

    // Typed constant suffix — must immediately follow closing quote (no space):
    // b=bit, d=date, dt=datetime, n=name-literal, t=time, x=hex-char
    _string_suffix: $ => token.immediate(/[BbDdNnTtXx][Tt]?/),

    // Decimal, scientific, or SAS hex numeric.
    // prec(1) ensures numeric_literal wins over equal-length catch-all regexes
    // (e.g. /[^;%()\s"'&]+/) when both match the same text like "42" or "3.14".
    numeric_literal: $ => token(prec(1, choice(
      /[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,
      /\.[0-9]+([eE][+-]?[0-9]+)?/,
      /[0-9A-Fa-f]+[Xx]/,
    ))),
  },
});
