test/corpus/macros_spf_packages.txt
==================
SPF nested macro definition inside macro body
==================

%macro SPFinit_intrnl_forceV7DSname(x);
  %macro A(ods);
    %put &ods;
  %mend A;
%mend SPFinit_intrnl_forceV7DSname;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier))
    (macro_definition
      name: (macro_name
        (identifier))
      (macro_parameters
        (identifier))
      (macro_call_statement
        name: (macro_name)
        (macro_variable_ref))
      (macro_end
        (macro_name
          (identifier))))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages dsSQL_Inner header single secure option
==================

%MACRO dsSQL_Inner() / secure;
  %local query;
%MEND;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier))
    (macro_call_statement
      name: (macro_name))
    (macro_end)))

==================
SAS SPF Packages SQL PARMBUFF SECURE same line
==================

%MACRO SQL() / PARMBUFF SECURE;
  %let SYSPBUFF = 1;
%MEND SQL;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier)
      (identifier))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages bundlePackages style header multiline des secure
==================

%macro bundlePackages(bundleName)/
des='Macro to create a bundle'
secure minoperator
;
  %let x=1;
%mend bundlePackages;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier))
    (macro_options
      (identifier)
      (string_literal)
      (identifier)
      (identifier))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages listPackages style secure parmbuff multiline des
==================

%macro listPackages(ds, quiet=0)/secure parmbuff
des='Macro to list SAS packages'
;
  %let x=1;
%mend listPackages;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier)
      (numeric_literal))
    (macro_options
      (identifier)
      (identifier)
      (identifier)
      (string_literal))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages SPFint_gnPckg_arch style options immediately after paren multiline des
==================

%macro SPFint_gnPckg_arch()/secure minoperator
des='internal macro'
;
  %let x=1;
%mend SPFint_gnPckg_arch;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier)
      (identifier)
      (identifier)
      (string_literal))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages verifyPackage multiline params with default and slash secure des
==================

%macro verifyPackage(
  packageName
, hash = F*
)/secure
des='verify'
;
  %let x=1;
%mend verifyPackage;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier))
    (macro_options
      (identifier)
      (identifier)
      (string_literal))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages loadPackage multiline params with macro call default slash secure des
==================

%macro loadPackage(
  packageName
, path = %sysfunc(pathname(packages))
)/secure
des = 'load'
minoperator
;
  %let x=1;
%mend loadPackage;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier)
      (macro_call
        name: (macro_name)
        (macro_arguments)))
    (macro_options
      (identifier)
      (identifier)
      (string_literal)
      (identifier))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
SAS SPF Packages block comment before macro header with slash secure
==================

/*** HELP START ***/
%macro helpPackage(x)/secure
des='help'
;
  %let x=1;
%mend helpPackage;

---

(program
  (block_comment)
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier))
    (macro_options
      (identifier)
      (identifier)
      (string_literal))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
Single-quoted string with escaped quote then percent (cats triple-quote pattern)
==================

data _null_;
  fileshort2 = cats('''%', y, "()'");
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)))
    (generic_statement
      (string_literal)
      (string_literal))
    (run_statement)))

==================
Double-quoted string with percent-doublequote macro-quoting form
==================

data _null_;
  title "Required: %str(%'%")";
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)))
    (generic_statement
      (string_literal))
    (run_statement)))
